--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,6 +37,8 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8
     }
 
+    def versionNameCustom = "${flutter.versionName}(d${flutter.versionCode})"
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.flavor_test"
@@ -45,7 +47,7 @@ android {
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        versionName = versionNameCustom
     }
 
     buildTypes {
