--- a/ios/Flutter/devRelease.xcconfig
+++ b/ios/Flutter/devRelease.xcconfig
@@ -5,3 +5,4 @@ FLUTTER_TARGET=lib/main_dev.dart
 ASSET_PREFIX=dev
 BUNDLE_NAME=FlavorDev
 BUNDLE_DISPLAY_NAME=FlavorDev
+FLUTTER_BUILD_NUMBER=d$(FLUTTER_BUILD_NUMBER)
