--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,7 +37,9 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8
     }
 
-    def versionNameCustom = "${flutter.versionName}(d${flutter.versionCode})"
+    def versionCode = System.getenv("FLUTTER_BUILD_NUMBER")?.toInteger() ?: 1
+    def versionNameBase = System.getenv("FLUTTER_BUILD_NAME") ?: "1.0.0"
+    def versionNameCustom = "${versionNameBase}(d${versionCode})"
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
@@ -46,7 +48,7 @@ android {
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
+        versionCode = versionCode
         versionName = versionNameCustom
     }
 
