--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,9 +37,8 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8
     }
 
-    def versionCode = System.getenv("FLUTTER_BUILD_NUMBER")?.toInteger() ?: 1
-    def versionNameBase = System.getenv("FLUTTER_BUILD_NAME") ?: "1.0.0"
-    def versionNameCustom = "${versionNameBase}(d${versionCode})"
+    def buildNumber = System.getenv("FLUTTER_BUILD_NUMBER")?.toInteger() ?: 1
+    def buildName = System.getenv("FLUTTER_BUILD_NAME") ?: "1.0.0"
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
@@ -48,8 +47,8 @@ android {
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
-        versionCode = versionCode
-        versionName = versionNameCustom
+        versionCode = buildNumber
+        versionName = buildName
     }
 
     buildTypes {
