--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -20,13 +20,15 @@ workflows:
           ＃取得 Flutter 版本
           VERSION_NAME=$(grep 'version:' pubspec.yaml | awk '{print $2}' | cut -d '+' -f1)
           BUILD_NUMBER=$(git rev-list --count HEAD)
-          BUILD_NAME="$VERSION_NAME(d$BUILD_NUMBER)"
+          DEV_NUMBER="d$(grep 'version:' pubspec.yaml | awk '{print $2}' | cut -d '+' -f2)"
+          BUILD_NAME="$VERSION_NAME$DEV_NUMBER"
 
           echo "Version Name: $BUILD_NAME"
           echo "Version Code: $BUILD_NUMBER"
 
           echo "FLUTTER_BUILD_NAME=$BUILD_NAME" >> $CM_ENV
           echo "FLUTTER_BUILD_NUMBER=$BUILD_NUMBER" >> $CM_ENV
+          echo "FLUTTER_DEV_NUMBER=$DEV_NUMBER" >> $CM_ENV
           
 
       - name: 安裝 Flutter 依賴
