--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_flavorizr: ^2.2.3
-  
+
 flavorizr:
+  app:
+    android:
+      flavorDimensions: "flavor-type"
   flavors:
     dev:
       app:
@@ -57,7 +60,6 @@ flavorizr:
         applicationId: "com.chi.prod"
       ios:
         bundleId: "com.chi.prod"
-
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
